--- a/src/app/core/auth/auth.component.html
+++ b/src/app/core/auth/auth.component.html
@@ -22,32 +22,24 @@
         >
           Sign in to your account
         </h1>
-        <form class="space-y-4 md:space-y-6" action="#">
+        <form class="space-y-4 md:space-y-6">
           <div>
-            <label
-              for="email"
-              class="block mb-2 text-sm font-medium text-gray-900"
+            <label class="block mb-2 text-sm font-medium text-gray-900"
               >Your email</label
             >
             <input
-              type="email"
               name="email"
-              id="email"
               class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
               placeholder="Email"
               required=""
             />
           </div>
           <div>
-            <label
-              for="password"
-              class="block mb-2 text-sm font-medium text-gray-900"
+            <label class="block mb-2 text-sm font-medium text-gray-900"
               >Password</label
             >
             <input
-              type="password"
               name="password"
-              id="password"
               placeholder="Password"
               class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
               required=""
@@ -55,7 +47,7 @@
           </div>
 
           <button
-            type="submit"
+            (click)="onLogin()"
             class="w-full text-white bg-blue-500 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
           >
             Sign in
