--- a/src/app/core/auth/auth.component.html
+++ b/src/app/core/auth/auth.component.html
@@ -2,10 +2,7 @@
   <div
     class="flex flex-col items-center justify-center px-6 py-8 h-screen lg:py-0"
   >
-    <a
-      href="#"
-      class="flex items-center mb-6 text-2xl font-semibold text-gray-900"
-    >
+    <a class="flex items-center mb-6 text-2xl font-semibold text-gray-900">
       <img
         class="w-8 h-8 mr-2"
         ngSrc="./assets/images/logo.png"
@@ -22,44 +19,75 @@
         >
           Sign in to your account
         </h1>
-        <form class="space-y-4 md:space-y-6">
+        <form
+          [formGroup]="authForm"
+          (ngSubmit)="onSubmit()"
+          class="space-y-4 md:space-y-6"
+        >
           <div>
             <label class="block mb-2 text-sm font-medium text-gray-900"
               >Your email</label
             >
             <input
-              name="email"
+              formControlName="email"
               class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
               placeholder="Email"
-              required=""
             />
           </div>
+          @if (authType === "register") {
+            <div>
+              <label class="block mb-2 text-sm font-medium text-gray-900"
+                >Your full name</label
+              >
+              <input
+                formControlName="fullName"
+                class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                placeholder="Name"
+              />
+            </div>
+          }
           <div>
             <label class="block mb-2 text-sm font-medium text-gray-900"
               >Password</label
             >
             <input
-              name="password"
+              formControlName="password"
               placeholder="Password"
               class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
-              required=""
             />
           </div>
 
           <button
-            (click)="onLogin()"
+            type="submit"
+            [ngClass]="{
+              'bg-blue-500 hover:bg-primary-700': authForm.valid,
+              'bg-blue-400 cursor-not-allowed': !authForm.valid,
+            }"
+            [disabled]="!authForm.valid"
             class="w-full text-white bg-blue-500 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
           >
             Sign in
           </button>
-          <p class="text-sm font-light text-gray-500">
-            Don’t have an account yet?
-            <a
-              href="#"
-              class="font-medium text-gray-600 text-primary-600 hover:underline"
-              >Sign up</a
-            >
-          </p>
+          @if (authType === "login") {
+            <p class="text-sm font-light text-gray-500">
+              Don’t have an account yet?
+              <a
+                [routerLink]="['/register']"
+                class="font-medium text-gray-600 cursor-pointer text-primary-600 hover:underline"
+                >Sign up</a
+              >
+            </p>
+          }
+          @if (authType === "register") {
+            <p class="text-sm font-light text-gray-500">
+              Already have an account?
+              <a
+                [routerLink]="['/login']"
+                class="font-medium text-gray-600 cursor-pointer text-primary-600 hover:underline"
+                >Sign in</a
+              >
+            </p>
+          }
         </form>
       </div>
     </div>
