--- a/src/app/core/auth/auth.component.html
+++ b/src/app/core/auth/auth.component.html
@@ -24,10 +24,8 @@
           (ngSubmit)="onSubmit()"
           class="space-y-4 md:space-y-6"
         >
-          <div>
-            <label class="block mb-2 text-sm font-medium text-gray-900"
-              >Your email</label
-            >
+          <div class="flex flex-col gap-1">
+            <label class="text-sm font-medium text-gray-900">Your email</label>
             <input
               formControlName="email"
               class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
@@ -35,8 +33,8 @@
             />
           </div>
           @if (authType === "register") {
-            <div>
-              <label class="block mb-2 text-sm font-medium text-gray-900"
+            <div class="flex flex-col gap-1">
+              <label class="text-sm font-medium text-gray-900"
                 >Your full name</label
               >
               <input
@@ -46,17 +44,26 @@
               />
             </div>
           }
-          <div>
-            <label class="block mb-2 text-sm font-medium text-gray-900"
-              >Password</label
-            >
-            <input
-              formControlName="password"
-              placeholder="Password"
-              class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
-            />
-          </div>
+          <div class="flex flex-col gap-1">
+            <div class="flex flex-col gap-1">
+              <label class="text-sm font-medium text-gray-900">Password</label>
+              <input
+                formControlName="password"
+                placeholder="Password"
+                class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+              />
+            </div>
 
+            @if (authType === "register") {
+              <div *ngIf="registerError" class="text-red-600 text-sm">
+                {{ registerError }}
+              </div>
+            } @else {
+              <div *ngIf="loginError" class="text-red-600 text-sm">
+                {{ loginError }}
+              </div>
+            }
+          </div>
           <button
             type="submit"
             [ngClass]="{
