--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="flex">
+  <app-layout-navbar />
+  <main class="flex-1 min-w-0">
+    <router-outlet></router-outlet>
+  </main>
+</div>
