--- a/src/app/featured/pages/home/home.component.html
+++ b/src/app/featured/pages/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div class="bg-gray-50 flex-col flex h-screen">
+  <div class="p-5 gap-2 flex flex-col">
+    <div class="flex gap-4 w-full bg-amber-700 flex-col">
+      <div class="text-2xl">Home page</div>
+      <p class="text-lg leading-relaxed">
+        Welcome to Budget.io, your ultimate solution for managing personal
+        finances with ease and efficiency. Our platform offers a comprehensive
+        suite of tools designed to help you track expenses, set budgets, and
+        achieve your financial goals. Join our community and take control of
+        your financial future today!
+      </p>
+    </div>
+    <div class="flex p-4 bg-amber-400">fle</div>
+  </div>
+</div>
