--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex">
+<div class="md:flex">
   <app-layout-navbar />
   <main class="flex-1 min-w-0">
     <router-outlet></router-outlet>
