--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -1,13 +1,18 @@
 <aside
   *ngIf="isAuthenticated"
-  class="h-screen flex flex-col w-64 px-4 py-4 bg-white border-r border-gray-200"
+  [ngClass]="{
+    block: isSidebarOpen,
+    hidden: !isSidebarOpen,
+    'fixed inset-0 z-50 flex flex-col w-64 px-4 py-4 bg-white  border-r border-gray-200 md:relative md:translate-x-0 md:top-0 md:flex md:h-screen': true,
+  }"
 >
+  <button>close</button>
   <a
     class="flex items-center mb-6 py-4 border-b text-2xl font-semibold text-gray-900"
   >
     <img
       class="w-8 h-8 mr-2"
-      ngSrc="./assets/images/logo.png"
+      src="./assets/images/logo.png"
       alt="logo"
       height="512"
       width="512"
@@ -37,46 +42,27 @@
           <span class="ms-3">Nista</span>
         </a>
       </li>
-      <li>
-        <a
-          href="#"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
-        >
-          <svg
-            class="shrink-0 w-5 h-5 text-gray-500 group-hover:text-gray-900"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 18 18"
-          >
-            <path
-              d="M6.143 0H1.857A1.857 1.857 0 0 0 0 1.857v4.286C0 7.169.831 8 1.857 8h4.286A1.857 1.857 0 0 0 8 6.143V1.857A1.857 1.857 0 0 0 6.143 0Zm10 0h-4.286A1.857 1.857 0 0 0 10 1.857v4.286C10 7.169 10.831 8 11.857 8h4.286A1.857 1.857 0 0 0 18 6.143V1.857A1.857 1.857 0 0 0 16.143 0Zm-10 10H1.857A1.857 1.857 0 0 0 0 11.857v4.286C0 17.169.831 18 1.857 18h4.286A1.857 1.857 0 0 0 8 16.143v-4.286A1.857 1.857 0 0 0 6.143 10Zm10 0h-4.286A1.857 1.857 0 0 0 10 11.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 18 16.143v-4.286A1.857 1.857 0 0 0 16.143 10Z"
-            />
-          </svg>
-          <span class="flex-1 ms-3 whitespace-nowrap">Nista</span>
-        </a>
-      </li>
-      <li>
-        <a
-          href="#"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
-        >
-          <svg
-            class="shrink-0 w-5 h-5 text-gray-500 transition duration-75"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 18 18"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M9 0a1 1 0 0 0-1 1v7.293l-1.146-1.147a1 1 0 0 0-1.415 1.414l3 3a1 1 0 0 0 1.415 0l3-3a1 1 0 0 0-1.415-1.414L10 8.293V1a1 1 0 0 0-1-1Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <span class="flex-1 ms-3 whitespace-nowrap">Nista</span>
-        </a>
-      </li>
     </ul>
   </div>
 </aside>
+
+<div class="md:hidden sticky top-0 left-0 bg-white shadow-md p-2">
+  <button
+    (click)="toggleSidebar()"
+    class="text-gray-500 p-3 border-2 rounded hover:text-gray-900"
+  >
+    <svg
+      class="w-6 h-6"
+      aria-hidden="true"
+      fill="currentColor"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        clip-rule="evenodd"
+        fill-rule="evenodd"
+        d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"
+      ></path>
+    </svg>
+  </button>
+</div>
