--- a/src/app/core/auth/auth.component.html
+++ b/src/app/core/auth/auth.component.html
@@ -3,8 +3,8 @@
 >
   <a class="flex items-center mb-6 text-2xl font-semibold text-gray-900">
     <img
-      class="w-8 h-8 mr-2"
-      ngSrc="./assets/images/logo.png"
+      class="w-12 h-12 mr-2"
+      ngSrc="./assets/images/logo.svg"
       alt="logo"
       height="512"
       width="512"
