--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,10 +1,8 @@
 <div class="bg-gray-50 gap-5 flex flex-col md:h-full flex-1 p-6">
-  <!-- Header -->
   <div class="bg-white p-6 rounded-lg block shadow-md">
     <h1 class="text-3xl font-semibold">Home Page</h1>
   </div>
 
-  <!-- Overview Cards -->
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div class="p-4 bg-white rounded-lg shadow-md flex flex-col items-center">
       <h2 class="text-xl font-semibold text-gray-700">Total Balance</h2>
@@ -16,7 +14,6 @@
     </div>
   </div>
 
-  <!-- Create Budget Card -->
   <div
     class="bg-white justify-center items-center flex flex-1 p-6 rounded-lg shadow-md"
   >
@@ -25,52 +22,24 @@
       <p class="text-gray-600 mb-4">
         Take control of your finances by creating your first budget today.
       </p>
-      <button
-        class="bg-amber-700 text-white px-4 py-2 rounded-lg shadow-md hover:bg-amber-800"
-      >
-        Create Budget
-      </button>
+      <app-button label="Create budget" />
     </div>
   </div>
 
-  <!-- Shortcuts to Features -->
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div
-      class="p-4 bg-white rounded-lg shadow-md flex flex-col items-center text-center"
+      class="px-4 py-7 bg-white rounded-lg shadow-md flex flex-col items-center text-center"
     >
       <h2 class="text-xl font-semibold text-gray-700">Add Transaction</h2>
       <p class="text-gray-600 mb-4">Quickly log a new expense or income.</p>
-      <button
-        class="bg-blue-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-blue-600"
-      >
-        Add Transaction
-      </button>
+      <app-button label="Add transaction" [size]="'small'" />
     </div>
     <div
       class="p-4 bg-white rounded-lg shadow-md flex flex-col items-center text-center"
     >
-      <h2 class="text-xl font-semibold text-gray-700">Set Goals</h2>
-      <p class="text-gray-600 mb-4">
-        Define financial goals and track progress.
-      </p>
-      <button
-        class="bg-green-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-600"
-      >
-        Set Goals
-      </button>
-    </div>
-    <div
-      class="p-4 bg-white rounded-lg shadow-md flex flex-col items-center text-center"
-    >
-      <h2 class="text-xl font-semibold text-gray-700">View Reports</h2>
-      <p class="text-gray-600 mb-4">
-        Analyze your spending habits with detailed reports.
-      </p>
-      <button
-        class="bg-purple-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-purple-600"
-      >
-        View Reports
-      </button>
+      <h2 class="text-xl font-semibold text-gray-700">View your account</h2>
+      <p class="text-gray-600 mb-4">Take a quick look at you account.</p>
+      <app-button label="View account" [size]="'small'" />
     </div>
   </div>
 </div>
