--- a/src/app/features/transactions/transactions.component.html
+++ b/src/app/features/transactions/transactions.component.html
@@ -1,1 +1,5 @@
-<p>transactions works!</p>
+<div class="bg-gray-50 gap-5 flex flex-col md:h-full flex-1 p-6">
+  <div class="bg-white p-6 rounded-lg block shadow-md">
+    <h1 class="text-3xl font-semibold">Transaction Page</h1>
+  </div>
+</div>
