--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -30,7 +30,9 @@
       </li>
     </ul>
   </div>
-  <div></div>
+  <div class="flex py-3 justify-center">
+    <app-button (buttonClick)="onLogOut()" label="Log out" [size]="'small'" />
+  </div>
 </aside>
 
 <div
