--- a/src/app/core/auth/auth.component.html
+++ b/src/app/core/auth/auth.component.html
@@ -21,7 +21,7 @@
       <form
         [formGroup]="authForm"
         (ngSubmit)="onSubmit()"
-        class="space-y-4 md:space-y-6"
+        class="space-y-5 flex flex-col md:space-y-6"
       >
         <div class="flex flex-col gap-1">
           <label class="text-sm font-medium text-gray-900">Your email</label>
@@ -63,17 +63,16 @@
             </div>
           }
         </div>
-        <button
-          type="submit"
-          [ngClass]="{
-            'bg-blue-500 hover:bg-primary-700': authForm.valid,
-            'bg-blue-400 cursor-not-allowed': !authForm.valid,
-          }"
+
+        <app-button
+          label="Sign in"
+          [color]="'blue'"
+          [size]="'medium'"
+          [fullWidth]="true"
           [disabled]="!authForm.valid"
-          class="w-full text-white bg-blue-500 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-        >
-          Sign in
-        </button>
+          (buttonClick)="onSubmit()"
+        ></app-button>
+
         @if (authType === "login") {
           <p class="text-sm font-light text-gray-500">
             Don’t have an account yet?
