--- a/src/app/features/transactions/transactions.component.html
+++ b/src/app/features/transactions/transactions.component.html
@@ -1,14 +1,19 @@
-<div class="bg-gray-50 gap-5 flex flex-col md:h-full flex-1 p-6">
+<div class="bg-gray-100 gap-5 flex flex-col md:h-full flex-1 p-6">
   <div
     class="bg-white p-5 rounded-lg flex items-center justify-between shadow-md"
   >
     <h1 class="text-3xl font-semibold">Transaction Page</h1>
     <app-button label="Add transaction" />
   </div>
-  <div>
-    <app-table
-      [tableData]="transactions"
-      [displayedColumns]="displayedColumns"
-    />
+  <div class="flex bg-white rounded flex-1 w-full shadow p-3">
+    <div
+      class="overflow-x-auto overflow-y-auto flex-1 max-h-[calc(100vh-200px)]"
+    >
+      <app-table
+        [tableData]="transactions"
+        [displayedColumns]="displayedColumns"
+        [actions]="actions"
+      />
+    </div>
   </div>
 </div>
