--- a/src/app/core/auth/auth.component.html
+++ b/src/app/core/auth/auth.component.html
@@ -66,7 +66,7 @@
 
         <app-button
           label="Sign in"
-          [color]="'blue'"
+          [color]="'indigo'"
           [size]="'medium'"
           [fullWidth]="true"
           [disabled]="isSubmitting || !authForm.valid"
