Added reusable input,dropdown components

--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -6,6 +6,9 @@
     type="text"
     [placeholder]="placeholder"
     [ngClass]="width"
+    [value]="value"
+    (input)="onInput($event)"
+    (blur)="onBlur()"
     class="block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
   />
 </div>
