--- a/src/app/features/transactions/components/transaction-input/transaction-input.component.html
+++ b/src/app/features/transactions/components/transaction-input/transaction-input.component.html
@@ -1,12 +1,12 @@
 <div
   class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
 >
-  <div class="bg-white flex gap-4 flex-col p-6 rounded-lg shadow-lg">
+  <div class="bg-white w-96 flex gap-4 flex-col p-6 rounded-lg shadow-lg">
     <div class="text-2xl">Add new transaction</div>
     <form class="space-y-4">
       <div>
         <app-dropdown
-          [options]="['Option 1', 'Option 2', 'Option 3']"
+          [options]="transactionTypeList"
           placeholder="Choose transaction type"
           (selectionChange)="handleSelection($event)"
         ></app-dropdown>
@@ -23,7 +23,7 @@
 
         <div class="w-full">
           <app-dropdown
-            [options]="['Option 1', 'Option 2', 'Option 3']"
+            [options]="currencyList"
             placeholder="Currency"
             (selectionChange)="handleSelection($event)"
           ></app-dropdown>
@@ -31,11 +31,7 @@
       </div>
 
       <div>
-        <app-input
-          label="Amount"
-          width="w-72"
-          placeholder="Enter Category ID"
-        />
+        <app-input placeholder="Enter amount" label="Amount" width="w-72" />
       </div>
 
       <div class="flex gap-2">
