--- a/src/app/shared/components/dropdown/dropdown.component.html
+++ b/src/app/shared/components/dropdown/dropdown.component.html
@@ -1,10 +1,14 @@
 <div class="w-full flex min-w-full max-w-full">
-  <div class="relative inline-block w-full text-left">
+  <div
+    (appClickOutside)="closeDropdown()"
+    class="relative inline-block w-full text-left"
+  >
     <div>
       <button
         type="button"
         class="inline-flex justify-between w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none"
-        (click)="toggleDropdown()"
+        (click)="toggleDropdown($event)"
+        (blur)="onBlur()"
       >
         {{ selectedOption || placeholder }}
         <svg
