--- a/src/app/features/account/account.component.html
+++ b/src/app/features/account/account.component.html
@@ -1,1 +1,8 @@
-<p>account works!</p>
+<div class="bg-gray-100 gap-5 flex flex-col md:h-full flex-1 p-6">
+  <div
+    class="bg-white p-5 rounded-lg flex items-center justify-between shadow-md"
+  >
+    <h1 class="text-3xl font-semibold">Account Page</h1>
+  </div>
+  <div class="flex bg-white rounded flex-1 w-full shadow p-3"></div>
+</div>
