--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="md:flex">
   <app-layout-navbar />
   <main class="flex-1 min-w-0">
+    <app-spinner></app-spinner>
     <router-outlet></router-outlet>
   </main>
 </div>
