--- a/src/app/core/auth/auth.component.html
+++ b/src/app/core/auth/auth.component.html
@@ -48,6 +48,7 @@
             <label class="text-sm font-medium text-gray-900">Password</label>
             <input
               formControlName="password"
+              type="password"
               placeholder="Password"
               class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
             />
