--- a/src/app/features/account/account.component.html
+++ b/src/app/features/account/account.component.html
@@ -1,8 +1,17 @@
-<div class="bg-gray-100 gap-5 flex flex-col md:h-full flex-1 p-6">
+<div class="bg-gray-100 gap-5 flex flex-col h-screen w-full p-6">
   <div
     class="bg-white p-5 rounded-lg flex items-center justify-between shadow-md"
   >
     <h1 class="text-3xl font-semibold">Account Page</h1>
   </div>
-  <div class="flex bg-white rounded flex-1 w-full shadow p-3"></div>
+  <app-user-details></app-user-details>
+  <div
+    class="bg-white items-center shadow flex-col flex rounded px-3 py-7 justify-center"
+  >
+    <div class="text-lg font-medium">Currect accout balance:</div>
+    <div class="text-2xl text-green-600 font-bold">
+      {{ accountDetails?.balance | currency: currencyCode }}
+    </div>
+  </div>
+  <app-financial-statistics></app-financial-statistics>
 </div>
