--- a/src/app/features/budget/budget.component.html
+++ b/src/app/features/budget/budget.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 gap-5 flex flex-col md:h-full flex-1 p-6">
+<div class="bg-gray-100 gap-5 flex flex-col h-screen flex-1 p-6">
   <div
     class="bg-white p-5 rounded-lg flex items-center justify-between shadow-md"
   >
