--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -12,7 +12,9 @@
     </div>
     <div class="p-4 bg-white rounded-lg shadow-md flex flex-col items-center">
       <h2 class="text-xl font-semibold text-gray-700">Total Expenses</h2>
-      <p class="text-2xl font-bold text-red-600">$1,750</p>
+      <p class="text-2xl font-bold text-red-600">
+        {{ totalExpenses | currency: currencyCode }}
+      </p>
     </div>
   </div>
 
